kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ing
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: "default/wildcard-tls"
  rules:
  - host: kibana.ops
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /
